--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
       <input type="text" name="code" placeholder="Gutscheincode" required />
       <button type="submit">Jetzt anfordern</button>
     </form>
+    <p id="status-message" style="margin-top: 10px; font-size: 0.9em; color: green;"></p>
     <div id="status"></div>
   </div>
   <footer>
-    <p>Impressum: Phillipp Helbig, Friedrichstraße 48, 65385 Rüdesheim – Kontakt via ThreemaID: E7T69HDV</p>
+    <p>Diese Seite kommt ohne Cookies aus | Impressum: Phillipp Helbig, Friedrichstraße 48, 65385 Rüdesheim – Kontakt via ThreemaID: E7T69HDV</p>
   </footer>
   <script src="script.js"></script>
 </body>
