--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <noscript>
+  <div style="background-color: #ffdddd; color: #900; padding: 1rem; text-align: center;">
+    ⚠️ JavaScript ist deaktiviert. Bitte aktiviere JavaScript, um das Formular nutzen zu können und dein Buch zu erhalten.
+  </div>
+</noscript>
+
   <div class="form-wrapper">
     <h1>ReThink Money EBook als PDF</h1>
     <p>Der Mailversand kann bis zu 2 Minuten dauern. Bitte auch im Spam-Ordner nachsehen.</p>
