--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="status"></div>
   </div>
   <footer>
-    <p>Diese Seite kommt ohne Cookies aus | Impressum: Phillipp Helbig, Friedrichstraße 48, 65385 Rüdesheim – Kontakt via ThreemaID: E7T69HDV</p>
+    <p>Diese Seite kommt ohne Cookies aus | Ihre Mailadresse wird ausschließlich im Posatausgang erfasst und dort nach 4 Wochen gelöscht | Impressum: Phillipp Helbig, Friedrichstraße 48, 65385 Rüdesheim – Kontakt via ThreemaID: E7T69HDV</p>
   </footer>
   <script src="script.js"></script>
 </body>
