--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="form-wrapper">
     <h1>ReThink Money EBook als PDF</h1>
-    <p>Der Mailversand kann bis zu 2 Minuten dauern. Bitte auch im Spam-Ordner nachsehen.</p>
+    <p>Der Mailversand dauert i.d.R. 5 Minuten. Bitte auch im Spam-Ordner nachsehen.</p>
     <form id="pdfForm">
       <input type="email" name="email" placeholder="Deine E-Mailadresse" required />
       <input type="text" name="code" placeholder="Gutscheincode" required />
