Social Media vorschau

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ReThink Money PDF</title>
   <link rel="stylesheet" href="style.css">
+<meta property="og:title" content="ReThink Money – Gratis PDF sichern">
+<meta property="og:description" content="Hole dir kostenlos das E-Book ReThink Money.">
+<meta property="og:image" content="https://rethinkmoney.github.io/rethink-pdf-website/cover1.jpg">
+<meta property="og:url" content="https://rethinkmoney.github.io/rethink-pdf-website/">
+<meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
   <noscript>
