--- a/index.html
+++ b/index.html
@@ -34,4 +34,5 @@
   </footer>
   <script src="script.js"></script>
 </body>
+  <a rel="me" href="https://mastodon.social/@hopeless_optimist">Mastodon</a>
 </html>
