--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </noscript>
 
   <div class="form-wrapper">
-    <h1>ReThink Money EBook als PDF</h1>
+    <h1>ReThink Money EBook als kostenloses PDF <a href="https://www.oekom.de/buch/rethink-money-9783987261763">oder hier als Hardcover</a></h1>
     <p>Der Mailversand dauert i.d.R. 5 Minuten. Bitte auch im Spam-Ordner nachsehen.</p>
     <form id="pdfForm">
       <input type="email" name="email" placeholder="Deine E-Mailadresse" required />
@@ -33,7 +33,8 @@
     <p>Diese Seite kommt ohne Cookies aus | Ihre Mailadresse wird ausschließlich im Posatausgang erfasst und dort nach 4 Wochen gelöscht | Impressum: Phillipp Helbig, Friedrichstraße 48, 65385 Rüdesheim – Kontakt via ThreemaID: E7T69HDV</p>
   </footer>
   <script src="script.js"></script>
-  <a rel="me" href="https://mastodon.social/@hopeless_optimist">Mastodon</a>
+  <a rel="me" href="https://mastodon.social/@hopeless_optimist"></a>
+  
 </body>
   
 </html>
