--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </noscript>
 
   <div class="form-wrapper">
-    <h1>ReThink Money EBook als kostenloses PDF <a href="https://www.oekom.de/buch/rethink-money-9783987261763">oder hier als Hardcover</a></h1>
-    <p>Der Mailversand dauert i.d.R. 5 Minuten. Bitte auch im Spam-Ordner nachsehen.</p>
+    <h1>ReThink Money EBook als kostenloses PDF </h1>
+    <p><a href="https://www.oekom.de/buch/rethink-money-9783987261763">Hardcover bestellen</a> Der Mailversand dauert i.d.R. 5 Minuten. Bitte auch im Spam-Ordner nachsehen.</p>
     <form id="pdfForm">
       <input type="email" name="email" placeholder="Deine E-Mailadresse" required />
       <input type="text" name="code" placeholder="Gutscheincode" required />
